ecmascript/parser/tests/test262-error-references/fail/95c10472e36270b6.js.stderr
error: Parenthesized expression cannot contain spread operator
 --> $DIR/tests/test262-parser/fail/95c10472e36270b6.js:1:7
  |
1 | (a,...a)
  |       ^

